--- a/TestDataGenerator/TestDataGenerator.csproj
+++ b/TestDataGenerator/TestDataGenerator.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Internal\GenerateTestData.cs">
       <DependentUpon>IGenerator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Internal\GenerateTestGuids.cs">
+      <DependentUpon>IGenerator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Internal\GetTestDataLengh.cs">
       <DependentUpon>ITestDataLengh.cs</DependentUpon>
     </Compile>
