--- a/TestDataGenerator/App.config
+++ b/TestDataGenerator/App.config
@@ -11,6 +11,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MahApps.Metro" publicKeyToken="f4fb5a3c4d1e5b4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.4.3.0" newVersion="1.4.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
   <userSettings>
     <TestDataGenerator.Properties.Settings>
       <setting name="Accent" serializeAs="String">
