--- a/TestDataGenerator/App.config
+++ b/TestDataGenerator/App.config
@@ -1,20 +1,23 @@
 <?xml version="1.0"?>
+
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="TestDataGenerator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-    </sectionGroup>
-  </configSections>
-  <runtime>
-  </runtime>
-  <userSettings>
-    <TestDataGenerator.Properties.Settings>
-      <setting name="Accent" serializeAs="String">
-        <value/>
-      </setting>
-      <setting name="Theme" serializeAs="String">
-        <value/>
-      </setting>
-    </TestDataGenerator.Properties.Settings>
-  </userSettings>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="TestDataGenerator.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser"
+			         requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<runtime>
+	</runtime>
+	<userSettings>
+		<TestDataGenerator.Properties.Settings>
+			<setting name="Accent" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="Theme" serializeAs="String">
+				<value />
+			</setting>
+		</TestDataGenerator.Properties.Settings>
+	</userSettings>
 </configuration>
