--- a/TestDataGenerator.Wpf/TestDataGenerator.Wpf.csproj
+++ b/TestDataGenerator.Wpf/TestDataGenerator.Wpf.csproj
@@ -1,4 +1,4 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" Sdk="Microsoft.NET.Sdk">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
     <OutputType>WinExe</OutputType>
