--- a/Directory.Build.Props
+++ b/Directory.Build.Props
@@ -15,27 +15,14 @@
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<PublishSingleFile>true</PublishSingleFile>
 		<RepositoryUrl>https://github.com/evilbaschdi/TestDataGenerator</RepositoryUrl>
+		<TargetFrameworks>net9.0</TargetFrameworks>
 		<Version>$([System.DateTime]::UtcNow.ToString(yyyy.M.d.Hmm))</Version>
 	</PropertyGroup>
 
-	<!-- Exact versions have to be set in Directory.Build.Targets -->
-	<Choose>
-		<When Condition="$(MSBuildProjectName.Contains('Wpf'))">
-			<PropertyGroup>
-				<TargetFrameworks>net0.0-windows</TargetFrameworks>
-			</PropertyGroup>
-		</When>
-		<Otherwise>
-			<PropertyGroup>
-				<TargetFrameworks>net0.0</TargetFrameworks>
-			</PropertyGroup>
-		</Otherwise>
-	</Choose>
-
 	<ItemGroup>
 		<Using Include="EvilBaschdi.Core" />
-		<Using Include="EvilBaschdi.DependencyInjection" />
-		<Using Include="EvilBaschdi.Settings" />
+		<Using Include="EvilBaschdi.Core.DependencyInjection" />
+		<Using Include="EvilBaschdi.Core.Settings" />
 		<Using Include="JetBrains.Annotations" />
 		<Using Include="Microsoft.Extensions.DependencyInjection" />
 		<Using Include="System.Linq" />
@@ -55,8 +42,8 @@
 
 	<ItemGroup Condition="'$(IsTestProject)' != 'true'">
 		<PackageReference Include="EvilBaschdi.Core" />
-		<PackageReference Include="EvilBaschdi.DependencyInjection" />
-		<PackageReference Include="EvilBaschdi.Settings" />
+		<PackageReference Include="EvilBaschdi.Core.DependencyInjection" />
+		<PackageReference Include="EvilBaschdi.Core.Settings" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(MSBuildProjectName.EndsWith('.Tests'))">
